# Vibrowser

./: .gitignore  AGENTS.md  CLAUDE.md  CLEVER_ENGINE_BLUEPRINT.md  CMakeLists.txt  README.md  build_launch_app.sh  build_test_bin.sh  codex-estate.md  rebuild_and_launch_clever_browser.sh  run_clever_browser_build_and_run.sh
.claude/: claude-estate.local.md  claude-estate.md
.codex/: codex-estate.local.md  codex-estate.md
.ralph/: .circuit_breaker_state  .ralph_session  .ralph_session_history  .ralphrc  @AGENT.md  @fix_plan.md  PROJECT_CONTEXT.md  progress.json  ralph_import.sh  ralph_loop.sh  status.json
_bmad/: config.yaml
audit/: architectural-intent-reconstruction.md  full-traversal-coverage-ledger.md  missing-components-criticality-map.md  rendering-js-network-security-findings.md  roadmap-three-stage.md  standards-compliance-matrix.md  viability-verdict.md
bmalph/: config.json
build_clean/: test_request_contracts  test_request_policy
build_cycle/: from_scratch_browser  test_bridge_mutations  (+30 more)
clever/src/css/parser/: CMakeLists.txt  selector.cpp  stylesheet.cpp
clever/src/css/style/: CMakeLists.txt  selector_matcher.cpp  style_resolver.cpp  value_parser.cpp
clever/src/js/: CMakeLists.txt  cors_policy.cpp  js_dom_bindings.cpp  js_engine.cpp  js_fetch_bindings.cpp  js_window.cpp
clever/src/net/: CMakeLists.txt  connection_pool.cpp  header_map.cpp  http_client.cpp  request.cpp  response.cpp
clever/src/paint/: CMakeLists.txt  display_list.cpp  painter.cpp  render_pipeline.cpp  software_renderer.cpp  text_renderer.mm
clever/src/shell/: CMakeLists.txt  browser_window.h  browser_window.mm  main.mm  render_view.h  render_view.mm
clever/src/url/: CMakeLists.txt  idna.cpp
clever/tests/unit/: CMakeLists.txt  cors_policy_test.cpp  css_parser_test.cpp  css_style_test.cpp  dom_test.cpp  event_loop_test.cpp  html_parser_test.cpp  http_client_test.cpp  js_engine_test.cpp  layout_test.cpp  message_channel_test.cpp  message_pipe_test.cpp  native_image_test.mm  paint_test.cpp  percent_encoding_test.cpp  serializer_test.cpp  thread_pool_test.cpp  url_parser_test.cpp
symphony/: .env.symphony  README.md  WORKFLOW.example.md  WORKFLOW.md  pyproject.toml
symphony/scripts/: run-once.sh  run.sh  setup.sh
symphony/symphony_service/: agent_runner.py  cli.py  codex_app_server.py  config.py  errors.py  logging_utils.py  models.py  orchestrator.py  tracker.py  utils.py  workflow.py  workspace.py
symphony/tests/: test_codex_client.py  test_orchestrator.py  test_tracker.py  test_workflow_config.py  test_workspace.py
vibrowser/: AUDIT_FULL.md  CMakeLists.txt  CMakePresets.json  Oops.rej  test_detail.xml
vibrowser/build.cycle2102.preclean/tests/unit/: vibrowser_http2_tests
vibrowser/build.cycle2103.verify/tests/unit/: vibrowser_http2_tests
vibrowser/build_verify/: google_gbv1_live.html
vibrowser/build_verify/tests/unit/: audit-matrix.md  clever_native_image_tests  vibrowser_native_image_tests
vibrowser/docs/: audit-reconciliation.json  implementation-queue.md  roadmap.md
vibrowser/include/clever/css/parser/: selector.h  stylesheet.h  tokenizer.h
vibrowser/include/clever/css/style/: computed_style.h  selector_matcher.h  style_resolver.h
vibrowser/include/clever/dom/: comment.h  document.h  element.h  event.h  node.h
vibrowser/include/clever/html/: tokenizer.h  tree_builder.h
vibrowser/include/clever/ipc/: message.h  message_channel.h  message_pipe.h  serializer.h
vibrowser/include/clever/js/: cors_policy.h  js_dom_bindings.h  js_engine.h  js_fetch_bindings.h  js_indexed_db.h  js_timers.h  js_web_audio.h  js_web_storage.h  js_window.h  js_workers.h
vibrowser/include/clever/layout/: box.h  layout_engine.h
vibrowser/include/clever/net/: connection_pool.h  cookie_jar.h  hpack.h  http2_connection.h  http_client.h  request.h  response.h  tls_socket.h
vibrowser/include/clever/paint/: animation_controller.h  canvas_text_bridge.h  display_list.h  image_fetch.h  painter.h  render_pipeline.h  software_renderer.h  text_renderer.h
vibrowser/include/clever/platform/: event_loop.h  thread_pool.h  timer.h
vibrowser/include/clever/url/: idna.h  url.h
vibrowser/src/css/parser/: CMakeLists.txt  selector.cpp  stylesheet.cpp  tokenizer.cpp
vibrowser/src/css/style/: CMakeLists.txt  computed_style.cpp  selector_matcher.cpp  style_resolver.cpp  value_parser.cpp
vibrowser/src/dom/: CMakeLists.txt  document.cpp  node.cpp
vibrowser/src/html/: CMakeLists.txt  simple_node.cpp  tokenizer.cpp  tree_builder.cpp
vibrowser/src/ipc/: CMakeLists.txt  message_channel.cpp  message_pipe.cpp  serializer.cpp
vibrowser/src/js/: CMakeLists.txt  cors_policy.cpp  js_dom_bindings.cpp  js_engine.cpp  js_fetch_bindings.cpp  js_indexed_db.cpp  js_timers.cpp  js_web_audio.cpp  js_web_storage.cpp  js_window.cpp  js_workers.cpp
vibrowser/src/layout/: CMakeLists.txt  layout_engine.cpp
vibrowser/src/net/: CMakeLists.txt  connection_pool.cpp  cookie_jar.cpp  hpack.cpp  http2_connection.cpp  http_client.cpp  request.cpp  response.cpp  tls_socket.cpp
vibrowser/src/paint/: CMakeLists.txt  animation_controller.cpp  canvas_text_bridge.mm  display_list.cpp  painter.cpp  render_pipeline.cpp  software_renderer.cpp  stb_image_impl.cpp  stb_image_write_impl.cpp  text_renderer.mm
vibrowser/src/platform/: CMakeLists.txt  event_loop.cpp  timer.cpp
vibrowser/src/shell/: CMakeLists.txt  Info.plist.in  browser_window.h  browser_window.mm  main.mm  render_view.h  render_view.mm
vibrowser/src/url/: CMakeLists.txt  percent_encoding.cpp  url.cpp  url_parser.cpp
vibrowser/tests/unit/: CMakeLists.txt  cors_policy_test.cpp  css_parser_test.cpp  css_style_test.cpp  dom_test.cpp  event_loop_test.cpp  html_parser_test.cpp  http2_test.cpp  http_client_test.cpp  js_document_lifecycle_test.cpp  js_engine_test.cpp  layout_table_regression_test.cpp  layout_test.cpp  message_channel_test.cpp  message_pipe_test.cpp  native_image_test.mm  paint_test.cpp  percent_encoding_test.cpp  serializer_test.cpp  thread_pool_test.cpp  timer_test.cpp  url_parser_test.cpp
vibrowser/tools/: audit_matrix.py
(+345 files in other folders)
