file(GLOB CSS_PARSER_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
if(CSS_PARSER_SOURCES)
    add_library(clever_css_parser STATIC ${CSS_PARSER_SOURCES})
else()
    add_library(clever_css_parser STATIC empty.cpp)
endif()
target_include_directories(clever_css_parser PUBLIC ${CMAKE_SOURCE_DIR}/include)
